# censored-cognition

./: .gitignore  README.md  censor.py  eval.py  eval_args.py  judge.py  metric.py  mult_cot_figs.py  mult_cot_judges.py  mult_cot_samples.py  mult_cot_solvers.py  play.py  plot.py  pyproject.toml  requirements.txt  run.py  run_experiment.py  run_pipeline.sh  solver.py  tests.py  utils.py
data/: prod_5_ints_1to20_test.jsonl  sum.jsonl  sum_2_ints.jsonl  sum_2_ints_censored_answer.jsonl
old/: eval_args.py  run.py  solver.py  solvers.yaml
old/data/: prod_5_ints_1to20.jsonl  prod_5_ints_1to20_censored_answer.jsonl
old/scripts/: create_sums_task.py
scripts/: create_multiply_task.py  make_multiplication_baseline_figures.py  make_multiplication_baseline_samples.py  make_multiplication_figures.py  make_multiplication_results.py  make_multiplication_samples.py  mult_memorize_figs.py  mult_memorize_judges.py  mult_memorize_results.py  mult_memorize_samples.py  mult_memorize_solvers.py
src/: json_serialization.py  judge.py  sample.py  solver.py  tests.py
src/scripts/: mult_cot_figs.py  mult_cot_judges.py  mult_cot_samples.py  mult_cot_solvers.py  mult_memorize_figs.py  mult_memorize_judges.py  mult_memorize_samples.py  mult_memorize_solvers.py
temp_refactor/: alt_judging.py  judge.py  main.py  make_multiplication_baseline.py  make_multiplication_baseline_figure.py  make_multiplication_baseline_samples.py  result.py  sample.py  solver.py  tests.py
temp_refactor/scripts/: alt_judging.py  (+5 more)
testfiles/: test_judge_result.jsonl  test_sample.jsonl  test_solver_result.jsonl
(+51 files in other folders)
